feat: added swagger documentation for APIs

--- a/Import data to MySQL/Import data to MySQL.ipynb
+++ b/Import data to MySQL/Import data to MySQL.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "45f9256d",
    "metadata": {},
    "outputs": [],
@@ -117,12 +117,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "233826d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('greenhouse_gas_inventory_data_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ad0f1e4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country_or_area</th>\n",
+       "      <th>year</th>\n",
+       "      <th>value</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>393126.946994</td>\n",
+       "      <td>carbon_dioxide_co2_emissions_without_land_use_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>396913.936530</td>\n",
+       "      <td>carbon_dioxide_co2_emissions_without_land_use_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>406462.847704</td>\n",
+       "      <td>carbon_dioxide_co2_emissions_without_land_use_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>403705.528314</td>\n",
+       "      <td>carbon_dioxide_co2_emissions_without_land_use_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>406200.993184</td>\n",
+       "      <td>carbon_dioxide_co2_emissions_without_land_use_...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8401</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>593.222570</td>\n",
+       "      <td>unspecified_mix_of_hydrofluorocarbons_hfcs_and...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8402</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>586.939752</td>\n",
+       "      <td>unspecified_mix_of_hydrofluorocarbons_hfcs_and...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8403</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>574.414624</td>\n",
+       "      <td>unspecified_mix_of_hydrofluorocarbons_hfcs_and...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8404</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>566.900968</td>\n",
+       "      <td>unspecified_mix_of_hydrofluorocarbons_hfcs_and...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8405</th>\n",
+       "      <td>United States of America</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>293.205663</td>\n",
+       "      <td>unspecified_mix_of_hydrofluorocarbons_hfcs_and...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8406 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               country_or_area  year          value  \\\n",
+       "0                    Australia  2014  393126.946994   \n",
+       "1                    Australia  2013  396913.936530   \n",
+       "2                    Australia  2012  406462.847704   \n",
+       "3                    Australia  2011  403705.528314   \n",
+       "4                    Australia  2010  406200.993184   \n",
+       "...                        ...   ...            ...   \n",
+       "8401  United States of America  1994     593.222570   \n",
+       "8402  United States of America  1993     586.939752   \n",
+       "8403  United States of America  1992     574.414624   \n",
+       "8404  United States of America  1991     566.900968   \n",
+       "8405  United States of America  1990     293.205663   \n",
+       "\n",
+       "                                               category  \n",
+       "0     carbon_dioxide_co2_emissions_without_land_use_...  \n",
+       "1     carbon_dioxide_co2_emissions_without_land_use_...  \n",
+       "2     carbon_dioxide_co2_emissions_without_land_use_...  \n",
+       "3     carbon_dioxide_co2_emissions_without_land_use_...  \n",
+       "4     carbon_dioxide_co2_emissions_without_land_use_...  \n",
+       "...                                                 ...  \n",
+       "8401  unspecified_mix_of_hydrofluorocarbons_hfcs_and...  \n",
+       "8402  unspecified_mix_of_hydrofluorocarbons_hfcs_and...  \n",
+       "8403  unspecified_mix_of_hydrofluorocarbons_hfcs_and...  \n",
+       "8404  unspecified_mix_of_hydrofluorocarbons_hfcs_and...  \n",
+       "8405  unspecified_mix_of_hydrofluorocarbons_hfcs_and...  \n",
+       "\n",
+       "[8406 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
