feat: Taking database config variables from env file in notebook

--- a/Import data to MySQL/Import data to MySQL.ipynb
+++ b/Import data to MySQL/Import data to MySQL.ipynb
@@ -7,42 +7,14 @@
    "source": [
     "## Install the following dependicies:\n",
     "- sqlalchemy \n",
-    "- sqlalchemy-utils"
+    "- sqlalchemy-utils\n",
+    "- load_dotenv"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a97bbda8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "env: DB_USED=mysql\n",
-      "env: DB_USER=root\n",
-      "env: DB_PASS=root\n",
-      "env: DB_HOST=localhost\n",
-      "env: DB_NAME=coding_assignment\n",
-      "env: DB_PORT=3306\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Add env config for MySQL database without quotes\n",
-    "%env DB_USED = mysql\n",
-    "%env DB_USER = root\n",
-    "%env DB_PASS = root\n",
-    "%env DB_HOST = localhost\n",
-    "%env DB_NAME = coding_assignment\n",
-    "%env DB_PORT = 3306"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "5d088023",
+   "id": "1fd56378",
    "metadata": {},
    "outputs": [
     {
@@ -53,25 +25,70 @@
       "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\ramra\\anaconda3\\lib\\site-packages (from sqlalchemy) (1.0.0)\n",
       "Requirement already satisfied: sqlalchemy-utils in c:\\users\\ramra\\anaconda3\\lib\\site-packages (0.38.3)\n",
       "Requirement already satisfied: SQLAlchemy>=1.3 in c:\\users\\ramra\\anaconda3\\lib\\site-packages (from sqlalchemy-utils) (1.4.7)\n",
-      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\ramra\\anaconda3\\lib\\site-packages (from SQLAlchemy>=1.3->sqlalchemy-utils) (1.0.0)\n"
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\users\\ramra\\anaconda3\\lib\\site-packages (from SQLAlchemy>=1.3->sqlalchemy-utils) (1.0.0)\n",
+      "Requirement already satisfied: load_dotenv in c:\\users\\ramra\\anaconda3\\lib\\site-packages (0.1.0)\n",
+      "Requirement already satisfied: python-dotenv in c:\\users\\ramra\\anaconda3\\lib\\site-packages (from load_dotenv) (0.21.0)\n"
      ]
     }
    ],
    "source": [
     "!pip install sqlalchemy\n",
-    "!pip install sqlalchemy-utils"
+    "!pip install sqlalchemy-utils\n",
+    "!pip install load_dotenv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "id": "c6a8987b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from pathlib import Path\n",
+    "\n",
+    "env_path = Path('..') / '.env'\n",
+    "\n",
+    "load_dotenv(dotenv_path=env_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a97bbda8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add env config for MySQL database without quotes\n",
+    "DB_USED = os.environ.get('DB_USED')\n",
+    "DB_USER = os.environ.get('DB_USER')\n",
+    "DB_PASS = os.environ.get('DB_PASS')\n",
+    "DB_HOST = os.environ.get('DB_HOST')\n",
+    "DB_NAME = os.environ.get('DB_NAME')\n",
+    "DB_PORT = os.environ.get('DB_PORT')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "45f9256d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import os\n",
     "# Using create_engine to connect to database\n",
     "from sqlalchemy import create_engine\n",
     "# Using utils to check if database exist and if not exist create a database with name provided\n",
@@ -80,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "b6d5af8a",
    "metadata": {},
    "outputs": [
@@ -88,19 +105,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n",
+      "True\n",
       "True\n"
      ]
     }
    ],
    "source": [
     "# Creating connection to database\n",
-    "databaseUsed = os.environ[\"DB_USED\"] \n",
-    "dbUser = os.environ[\"DB_USER\"] \n",
-    "dbPass = os.environ[\"DB_PASS\"] \n",
-    "host = os.environ[\"DB_HOST\"]\n",
-    "dbName = os.environ[\"DB_NAME\"]\n",
-    "port = os.environ[\"DB_PORT\"] \n",
+    "databaseUsed = DB_USED \n",
+    "dbUser = DB_USER \n",
+    "dbPass = DB_PASS \n",
+    "host = DB_HOST\n",
+    "dbName = DB_NAME\n",
+    "port = DB_PORT \n",
     "\n",
     "engine = create_engine(f'{databaseUsed}+pymysql://{dbUser}:{dbPass}@{host}/{dbName}', echo=False,)\n",
     "\n",
@@ -117,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "233826d5",
    "metadata": {},
    "outputs": [],
@@ -127,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "ad0f1e4e",
    "metadata": {},
    "outputs": [
@@ -271,7 +288,7 @@
        "[8406 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "e4fd3836",
    "metadata": {},
    "outputs": [
@@ -309,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "cae089d3",
    "metadata": {},
    "outputs": [],
@@ -320,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "09cf01ef",
    "metadata": {},
    "outputs": [],
@@ -342,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "29940a78",
    "metadata": {},
    "outputs": [],
@@ -354,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "8ec2a54f",
    "metadata": {},
    "outputs": [
@@ -365,7 +382,7 @@
        "       'SF6', 'HFC-PFC-mix'], dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "6212dd75",
    "metadata": {},
    "outputs": [
@@ -397,7 +414,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "026094e9",
    "metadata": {},
    "outputs": [
@@ -427,7 +444,7 @@
        "       'United States of America'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "18c779ed",
    "metadata": {},
    "outputs": [],
@@ -452,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "17dfd9d6",
    "metadata": {},
    "outputs": [
@@ -595,7 +612,7 @@
        "[8406 rows x 5 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
