--- a/Import data to MySQL/Import data to MySQL.ipynb
+++ b/Import data to MySQL/Import data to MySQL.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c6a8987b",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,10 +66,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a97bbda8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sql6524190'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Add env config for MySQL database without quotes\n",
     "DB_USED = os.environ.get('DB_USED')\n",
@@ -77,12 +88,13 @@
     "DB_PASS = os.environ.get('DB_PASS')\n",
     "DB_HOST = os.environ.get('DB_HOST')\n",
     "DB_NAME = os.environ.get('DB_NAME')\n",
-    "DB_PORT = os.environ.get('DB_PORT')"
+    "DB_PORT = os.environ.get('DB_PORT')\n",
+    "DB_NAME"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "45f9256d",
    "metadata": {},
    "outputs": [],
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b6d5af8a",
    "metadata": {},
    "outputs": [
@@ -134,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "233826d5",
    "metadata": {},
    "outputs": [],
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ad0f1e4e",
    "metadata": {},
    "outputs": [
@@ -288,7 +300,7 @@
        "[8406 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e4fd3836",
    "metadata": {},
    "outputs": [
@@ -326,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cae089d3",
    "metadata": {},
    "outputs": [],
@@ -337,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "09cf01ef",
    "metadata": {},
    "outputs": [],
@@ -359,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "29940a78",
    "metadata": {},
    "outputs": [],
@@ -371,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8ec2a54f",
    "metadata": {},
    "outputs": [
@@ -382,7 +394,7 @@
        "       'SF6', 'HFC-PFC-mix'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "6212dd75",
    "metadata": {},
    "outputs": [
@@ -414,7 +426,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "026094e9",
    "metadata": {},
    "outputs": [
@@ -444,7 +456,7 @@
        "       'United States of America'], dtype=object)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "18c779ed",
    "metadata": {},
    "outputs": [],
@@ -469,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "17dfd9d6",
    "metadata": {},
    "outputs": [
@@ -612,7 +624,7 @@
        "[8406 rows x 5 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "de4f7c5d",
    "metadata": {},
    "outputs": [],
